--- a/public/css/whack.css
+++ b/public/css/whack.css
@@ -17,11 +17,19 @@ h1, h2, h3, h4, h5, h6, p {
 
 h1 {
     font-weight: 900;
-    /*font-style: italic;*/
+    margin-bottom: 0;
 }
 
-h4 {
+h4, h3 {
     font-weight: 900;
+}
+
+.score {
+    padding-top: 0.125rem;
+}
+
+.row {
+    max-width: 40rem;
 }
 
 .normal {
@@ -36,71 +44,55 @@ h4 {
     letter-spacing: 0.0625rem;
 }
 
-.pad-top {
-    margin-top: 1.5rem;
+.middle, .bottom {
+    padding-top: 0.9375rem;
 }
 
-.pad-right {
-    padding-right: 1rem;
+.lime {
+    color: #01FF70;
+}
+ 
+.hole {
+    width: 100%;
+    height: 5rem;
+    border-radius: 50%;
+    background: #222222;
+    position: relative;
+    /*border-top: 0.25rem solid #001f3f;*/
 }
 
-.pad-bottom {
-    margin-bottom: 0.5rem;
-}
-
-.pad-left {
-    margin-left: 1rem;
-}
-
-.negative-top {
-    margin-top: -0.75rem;
-}
-
-.negative-top-more {
-    margin-top: -2.5rem;
+.hole:hover {
+    background: #000000;
 }
 
 .mole {
-    z-index: 100;
+    width: 100%;
+    height: 5rem;
+    border-radius: 50%;
+    background-image: url(/img/mole-fade.png);
+    background-size: cover;
     position: absolute;
+    top: -0.4rem;
     left: 0;
-}
-
-.invisible {
+    z-index: 100;
     display: none;
 }
 
-ul {
-    overflow: hidden;
-}
-
-li {
-    position: relative;
-}
-
-/*img {
-    position:absolute;
-    top: 0;
-    left: 0;
-}*/
-
-/*li {
-    background-image: url(/img/trans.png), url(/img/mole-400.png);
-    background-repeat: no-repeat, no-repeat;
-    background-size: contain, contain;
-}*/
-
 .container {
-    margin-top: 2rem;
+    padding-top: 2rem;
 }
 
-.grid-border {
-    border-top: 0.0625rem solid #01FF70;
-    border-top: 0.0625rem solid rgba(1,255,112,0.4);
-    border-bottom: 0.0625rem solid #01FF70;
-    border-bottom: 0.0625rem solid rgba(1,255,112,0.4);
+/*.grid-border {
+    border: 0.0625rem solid #01FF70;
+    border: 0.0625rem solid rgba(1,255,112,0.4);
     background: rgba(1,255,112,0.1);
+}*/
+
+.game-board {
+    padding-top: 1rem;
+    padding-bottom: 3rem;
 }
+
 
 
 
