--- a/public/css/whack.css
+++ b/public/css/whack.css
@@ -19,6 +19,7 @@ body {
 
 h1, h2, h3, h4, h5, h6, p {
     font-family: 'Alegreya Sans', sans-serif;
+    cursor: default;
 }
 
 h1 {
@@ -45,8 +46,17 @@ h4, h3 {
   float: right;
 }
 
+#high {
+  text-align: right;
+  float: right;
+}
+
 #seconds {
-  font-weight: 300;
+  font-weight: 400;
+}
+
+.normal {
+  font-weight: 400;
 }
 
 .row {
@@ -76,6 +86,12 @@ h4, h3 {
 
 .lime {
     color: #01FF70;
+    transition: 2500ms ease-out;
+}
+
+.gray {
+    color: #222222;
+    transition: 800ms ease-out;
 }
  
 .hole {
@@ -95,7 +111,7 @@ h4, h3 {
     width: 100%;
     height: 5rem;
     border-radius: 50%;
-    background-image: url(/img/mole-fade-more.png);
+    background-image: url(/img/mole-fade-small.png);
     background-size: cover;
     position: absolute;
     top: -0.4rem;
@@ -105,6 +121,10 @@ h4, h3 {
     /*margin-left: -50%; */  
     z-index: 100;
     display: none;
+}
+
+.mole:active {
+  background-image: url(/img/mole-fade-blood.png);
 }
 
 .container {
@@ -118,7 +138,7 @@ h4, h3 {
 }*/
 
 .game-board {
-    padding-top: 1rem;
+    padding-top: 1.25rem;
     padding-bottom: 7rem;
 }
 
@@ -159,7 +179,7 @@ hr {
   border-style: solid;
   border-width: 1px;
   cursor: pointer;
-  font-weight: normal;
+  font-weight: 400;
   line-height: normal;
   margin: 0 0 1.25rem;
   /*position: relative;*/
@@ -205,6 +225,7 @@ button.tiny, .button.tiny {
 .whack {
   color: #222222;
   border-color: #222222;
+  transition: 800ms ease-out;
 }
 
 .whack:hover {
@@ -214,7 +235,16 @@ button.tiny, .button.tiny {
 
 #start {
     margin-top: 1rem;
-    margin-bottom: 0.5rem;
+    margin-bottom: 0;
+}
+
+.restart {
+    transition: 800ms ease-out;
+}
+
+.restart-two {
+  color: #222222;
+  transition: 800ms ease-out;
 }
 
 .button.right {
@@ -230,4 +260,8 @@ button.tiny, .button.tiny {
   top: 0;
   right: 0;
   margin-right: 0.9375rem;
+}
+
+.hide-one {
+  display: none;
 }
